Resolves: tdf#124984 organize basic macro new added module doesn't show up

Change-Id: I422131ab203eba62ed5cf6fb2e19e23325b43f6e
Reviewed-on: https://gerrit.libreoffice.org/71433
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>