basctl/source/basicide/bastype2.cxx
@@ -1351,10 +1351,11 @@ void SbTreeListBox::AddEntry(
     const OUString& rImage,
     const weld::TreeIter* pParent,
     bool bChildrenOnDemand,
-    std::unique_ptr<Entry>&& rUserData)
+    std::unique_ptr<Entry>&& rUserData,
+    weld::TreeIter* pRet)
 {
     OUString sId(OUString::number(reinterpret_cast<sal_uInt64>(rUserData.release())));
-    m_xControl->insert(pParent, -1, &rText, &sId, nullptr, nullptr, &rImage, bChildrenOnDemand, nullptr);
+    m_xControl->insert(pParent, -1, &rText, &sId, nullptr, nullptr, &rImage, bChildrenOnDemand, pRet);
 }
 
 void SbTreeListBox::SetEntryBitmaps(const weld::TreeIter& rIter, const OUString& rImage)
